--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-openjdk-i386">
+	<classpathentry kind="src" path="src" />
+	<classpathentry kind="src" path="test" />
+	<classpathentry kind="con"
+		path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="owner.project.facets" value="java" />
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
+	<classpathentry kind="con"
+		path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
+			<attribute name="owner.project.facets" value="jst.web" />
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/logback-classic-1.0.11.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/logback-core-1.0.11.jar"/>
-	<classpathentry kind="lib" path="/home/robin/workspace/Echo/WebContent/WEB-INF/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con"
+		path="org.eclipse.jst.j2ee.internal.web.container" />
+	<classpathentry kind="con"
+		path="org.eclipse.jst.j2ee.internal.module.container" />
+	<classpathentry kind="con"
+		path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4" />
+	<classpathentry kind="lib"
+		path="WebContent/WEB-INF/lib/log4j-1.2.14.jar" />
+	<classpathentry kind="lib"
+		path="WebContent/WEB-INF/lib/logback-classic-1.0.11.jar" />
+	<classpathentry kind="lib"
+		path="WebContent/WEB-INF/lib/logback-core-1.0.11.jar" />
+	<classpathentry kind="output" path="build/classes" />
 </classpath>
